<resources>
    <string name="app_name">Roomies</string>
    <string name="welcome_back">Hi Roomie!</string>
    <string name="read_it_together"></string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="address">Department Address</string>
    <string name="forget_password">Forget Password?</string>
    <string name="app_key">AIzaSyCDBJNU3zwheuVx_JtuYJ3aNu12Aizk3qE</string>
    <string name="error_weak_password">Weak Password</string>
    <string name="error_invalid_email">Incorrect mail</string>
    <string name="error_user_exists">Mail address already signed up</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="intro1">Stay up to date and connected with your roomies  about what happens and what is needed at your apartment</string>
    <string name="create">Create a new apartment</string>
    <string name="join"><u>Join to Apartment</u></string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="joinroom_title">Catch up with your Roomies</string>
    <string name="joinroom_info">Enter your existing apartment code</string>
    <string name="joinroom_code">Apartment Code</string>
    <string name="joinroom_button">Join</string>
    <string name="addroom_title">Customize your Apartment</string>
    <string name="addroom_title_update">Update your apartment</string>
    <string name="saltValue">AfekaCollegeAndroid</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="user">user</string>
    <string name="users">users</string>
    <string name="Users">Users</string>
    <string name="Apartments">Apartments</string>
    <string name="imageUrl">imageUrl</string>
    <string name="username">name</string>
    <string name="chat">chat</string>
    <string name="Chat">Chat</string>
    <string name="msg">msg</string>
    <string name="joinOurRoom">"Hey! Join to our Roomies apartment with the code: "</string>
    <string name="joinOurRoomTitle">Join to our apartment</string>
    <string name="shareVia">Share via</string>
    <string name="addressDB">address</string>
    <string name="financialBalance">financialBalance</string>
    <string name="balance">balance</string>
    <string name="Balance">Balance</string>
    <string name="emailAdd">email</string>
    <string name="Updated">Updated</string>
    <string name="imageFailed">Profile image failed..</string>
    <string name="typeSomething">You should type something</string>
    <string name="notExist">Apartment code not Exist!</string>
    <string name="requiredFailed">"Required failed.."</string>
    <string name="choresList">"Chores List"</string>
    <string name="dataAdd">"Data Add"</string>










    <string-array name="chores_spinner">
        <item>Bathroom</item>
        <item>Dishes</item>
        <item>Floor</item>
        <item>Sweep</item>
        <item>Kitchen</item>
        <item>Trash</item>
        <item>Dishwasher</item>
        <item>Walk with the dog</item>
        <item>Other</item>
    </string-array>

    <string-array name="finance_spinner">
        <item>Electricity</item>
        <item>Water</item>
        <item>Gas</item>
        <item>Home Committee</item>
        <item>Property tax</item>
        <item>Other</item>
    </string-array>
</resources>
