<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorLoginView"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/joinroomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:fontFamily="@font/proximabold"
            android:gravity="center"
            android:text="@string/joinroom_title"
            android:textColor="@color/colorButtonBackground"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/joinroomInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/joinroomTitle"
            android:fontFamily="@font/proximaregular"
            android:gravity="center"
            android:text="@string/joinroom_info"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/joinroomCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/joinroomInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#C4C4C4"
            android:hint="@string/joinroom_code"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />

        <Button
            android:id="@+id/joinroomB"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorButtonBackground"
            android:text="@string/joinroom_button"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>