<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginView"
    tools:context=".ProfileActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="40dp">


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/my_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/avatar1"
        app:civ_border_color="#3f51b5"
        app:civ_border_width="4dp"
        app:civ_shadow_color="#3f51b5"
        android:scaleType="centerInside" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proximabold"
        android:text="Set your Avatar"
        android:textColor="@color/colorTextView"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/proximabold"
        android:gravity="center"
        android:maxLines="1"
        android:text="Mail"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:fontFamily="@font/proximaregular"
        android:layout_marginTop="40dp"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_CurrentPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/currentpassword"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:fontFamily="@font/proximaregular"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_NewPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/newpassword"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:fontFamily="@font/proximaregular"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="15sp" />

    <Button
        android:id="@+id/edit_saveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Save Changes"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/edit_leaveApartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Leave Apartment"/>

        <Button
            android:id="@+id/edit_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="Log-out"/>
    </LinearLayout>
</LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>